--- a/1. Getting Started with Dask.ipynb
+++ b/1. Getting Started with Dask.ipynb
@@ -7,14 +7,16 @@
    "source": [
     "# Getting Started with Dask\n",
     "\n",
-    "**Dask** is a library for parallel computing in Python. It works by \"chunking\" large datasets into smaller datasets, and performing computations on the smaller datasets in parallel. For instance, it can break up a large Pandas DataFrame of 100k rows into 10 Pandas DataFrames of 10k rows. Then, when we want to perform some operation on the large 100k-row DataFrame, the Dask scheduler will schedule 10 tasks to be performed in parallel (in fact, it will determine and only schedule the tasks that are absolutely necessary for the final result).\n",
+    "**Dask** is a library for parallel computing in Python.\n",
     "\n",
-    "This notebook will get us accustomed to the way Dask works cooperatively with Pandas. It assumes familiarity with Pandas DataFrames and basic operations like indexing and aggregations."
+    "It works by chunking large datasets into smaller datasets, and performing computations on the smaller datasets in parallel. For instance, it can break up a large Pandas DataFrame of 100k rows into 10 Pandas DataFrames of 10k rows. Then, when we want to perform some operation on the large 100k-row DataFrame, the Dask scheduler will schedule 10 tasks to be performed in parallel.\n",
+    "\n",
+    "This notebook will get us accustomed to the way Dask works cooperatively with Pandas. It assumes familiarity with Pandas DataFrames and basic operations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "ffb9ca85",
    "metadata": {},
    "outputs": [],
@@ -30,16 +32,16 @@
    "id": "663f5ada",
    "metadata": {},
    "source": [
-    "As seen in the above import, Dask has its own DataFrame, called Dask DataFrame. A Dask DataFrame is composed of a number of Pandas DataFrames, each representing a \"chunk\". We can specify the number of chunks when we initialize a Dask DataFrame.\n",
+    "As seen in the above import, Dask has its own DataFrame, called Dask DataFrame. A Dask DataFrame is composed of a number of Pandas DataFrames, each representing a \"chunk\" of the entire dataset. We can specify the number of chunks when we initialize a Dask DataFrame.\n",
     "\n",
     "One way to initialize a Dask DataFrame is to take an existing Pandas DataFrame, and create a Dask DataFrame from that.\n",
     "\n",
-    "So, let's first start by creating a dummy Pandas DataFrame (using a Pandas DatetimeIndex):"
+    "So, let's first start by creating a dummy Pandas DataFrame (using a `DatetimeIndex`):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "ce875a27",
    "metadata": {},
    "outputs": [
@@ -146,7 +148,7 @@
        "[2400 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,12 +164,14 @@
    "id": "86a42898",
    "metadata": {},
    "source": [
-    "and then we can convert it to a Dask DataFrame. Our original Pandas DataFrame has 2400 rows. Let's set up the Dask DataFrame such that it has 10 partitions, each of 240 rows:"
+    "Let's create a Dask DataFrame from this Pandas DataFrame and see how these two differ.\n",
+    "\n",
+    "Our original Pandas DataFrame has 2400 rows. Let's set up the Dask DataFrame such that it has 10 partitions, each of 240 rows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "b825cabd",
    "metadata": {},
    "outputs": [
@@ -245,7 +249,7 @@
        "Dask Name: from_pandas, 1 graph layer"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,12 +264,12 @@
    "id": "5da5f154",
    "metadata": {},
    "source": [
-    "as you can see, a Dask DataFrame is really just a collection of Pandas DataFrames, each representing a chunk of the entire dataset. We can see the edges of the Pandas DataFrames (i.e. the index range of each partition) as such:"
+    "As you can see, a Dask DataFrame is really just a collection of Pandas DataFrames, each representing a chunk of the entire dataset. We can see the edges of the Pandas DataFrames (i.e. the index range of each partition) as such:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "8166bdf8",
    "metadata": {},
    "outputs": [
@@ -285,7 +289,7 @@
        " Timestamp('2021-12-09 23:00:00', freq='H'))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "61a5be1d",
    "metadata": {},
    "outputs": [
@@ -364,7 +368,7 @@
        "Dask Name: blocks, 2 graph layers"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,16 +382,18 @@
    "id": "e2242fba",
    "metadata": {},
    "source": [
-    "One cool thing about Dask is that when we set up an operation for it (like indexing or averaging), it won't immediately compute the result. It will setup the operation so that it can be computed when we need the result. If we want the result now, we have to explicitly specify that. This way, Dask can determine exactly which tasks it needs to do to get the final result, instead of greedily doing everything.\n",
+    "An interesting thing about Dask is that it *defers* the computation of operations, such as indexing into the DataFrame or averaging a column, until the result is explicitly requested. Unlike conventional approaches where computations are performed immediately, Dask just *sets up* the operation to be performed later. This approach allows Dask to precisely determine the necessary tasks for obtaining the final result, avoiding unnecessary work by perform computations greedily.\n",
     "\n",
-    "For instance, let's say we want to define a 2D matrix, fill it with random values, and compute the average value across the first row. In regular Python or NumPy, we would have to generate the entire matrix, generate all the random values, and then compute the average value across the first row. We wasted time doing unnecessary work (i.e. generating the rest of the matrix). Dask, however, does not immediately generate the matrix. It waits until we need the result, and only does the work that's absolutely necessary (i.e. only fills the first row). It does this by building up a task graph, and dynamically ordering it based on the dependencies.\n",
+    "For example, consider the task of defining a 2D matrix, populating it with random values, and calculating the average value across the first row. In standard Python or NumPy, this involves generating the entire matrix, including all the random values, before computing the desired average. This results in wasted effort, as it generates data that is not needed.\n",
     "\n",
-    "That explains why above, we don't see the values of the Pandas DataFrame at partition 4. To actually see the results, we need to tell Dask explicitly to perform the computation, as such:"
+    "Dask, on the other hand, postpones matrix generation until the result is explicitly required, performing only the essential work (i.e. filling the first row). It does this by building up a task graph, and dynamically priorizing tasks as needed based on their dependencies. By doing so, Dask determines that the rest of the rows don't need to be populated, so only generates the part of the matrix we actually need for the final result -- saving us time and space.\n",
+    "\n",
+    "This explains why the values of the Pandas DataFrame at partition 4 are not visible above. To actually see the results as a regular Pandas DataFrame, you must instruct Dask explicitly to execute the computation, as such:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "f6df1c59",
    "metadata": {},
    "outputs": [
@@ -494,7 +500,7 @@
        "[240 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,12 +514,12 @@
    "id": "f2b3b7c6",
    "metadata": {},
    "source": [
-    "Also, earlier, I did oversimplify a little bit by saying that a Dask DataFrame is *just* a collection of Pandas DataFrames. While that's true at its core, these Pandas DataFrames can easily work together if need be. For instance, we can index the Dask DataFrame without thinking of partitions, and Dask will schedule the tasks for each of the affected partitions to to their own indexing. Dask will then collect the result of these different tasks nicely:"
+    "Also, earlier, I did oversimplify a little bit by saying that a Dask DataFrame is *just* a collection of Pandas DataFrames. While that's true at its core, these Pandas DataFrames can work together if need be. For instance, we can index the Dask DataFrame without thinking of partitions, and Dask will schedule the tasks for each of the affected partitions to to their own indexing. Dask will then collect the result of these different tasks nicely:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "c2661874",
    "metadata": {},
    "outputs": [
@@ -573,7 +579,7 @@
        "Dask Name: loc, 2 graph layers"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,12 +593,12 @@
    "id": "88d12581",
    "metadata": {},
    "source": [
-    "Therefore, in most cases, we don't actually have to deal with the individual partitions. We can just perform operations on the big Dask DataFrame, and it will take care of scheduling the proper tasks for the proper partitions, as well as collecting the result to return to us in an expected format. In other words, **in many cases, we can just treat the Dask DataFrame like a Pandas DataFrame and expect it to work well** (the only difference being that we have to tell Dask to explicitly compute the result, which it otherwise doesn't do):"
+    "Therefore, in most cases, we don't actually have to deal with the individual partitions. We can just perform operations on the Dask DataFrame, and it will take care of scheduling the proper tasks for the proper partitions, as well as collecting the result to return to us in an expected format. In other words, **in many cases, we can just treat the Dask DataFrame like a Pandas DataFrame and expect it to work well** (the only difference being that we have to tell Dask to explicitly compute the result, which it otherwise doesn't do):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "0a27de62",
    "metadata": {},
    "outputs": [
@@ -699,7 +705,7 @@
        "[198 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,12 +719,45 @@
    "id": "76c350c8",
    "metadata": {},
    "source": [
-    "Let's say we want to calculate the average of the `a` column in the entire Dask DataFrame. Normally, in Pandas, we would do `df[\"a\"].mean()`. In Dask, we can do the same thing:"
+    "Let's say we want to calculate the average of the `a` column in the entire DataFrame.\n",
+    "\n",
+    "Recall from above that `df` is a Pandas DataFrame, and `ddf` is a Dask DataFrame.\n",
+    "\n",
+    "This is how we would do it with Pandas:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
+   "id": "d2d86a43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1199.5"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"a\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2923d1a",
+   "metadata": {},
+   "source": [
+    "The Dask DataFrame API tends to mimic the Pandas DataFrame API closely, so we can do something similar with our Dask DataFrame:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "a480c174",
    "metadata": {},
    "outputs": [
@@ -728,7 +767,7 @@
        "dd.Scalar<series-..., dtype=float64>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +781,7 @@
    "id": "3c877d08",
    "metadata": {},
    "source": [
-    "Well, what the heck is a `dd.Scalar`? Didn't you say that Dask will take care of dividing the work and collecting the result? \n",
+    "Where is our average value? Why do we get a `dd.Scalar` instead? Didn't you say that Dask will take care of dividing the work and collecting the result? \n",
     "\n",
     "That's correct, Dask will do that, but remember: we have to ask Dask to compute the result. A `dd.Scalar` is a lazy data structure -- it knows what work it has to do, but hasn't performed the work yet."
    ]
@@ -780,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "8723d15b",
    "metadata": {},
    "outputs": [
@@ -795,7 +834,7 @@
        "Dask Name: sub, 7 graph layers"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,12 +849,12 @@
    "id": "d3ec1fec",
    "metadata": {},
    "source": [
-    "Again, the Dask Series is a lazy equivalent of the Pandas Series. If we need the results immediately, we can specify it as such:"
+    "Again, the Dask Series is a lazy equivalent of the Pandas Series (column). If we need the result immediately, we can tell Dask to schedule and compute it:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "d0a40e0a",
    "metadata": {},
    "outputs": [
@@ -836,7 +875,7 @@
        "Freq: H, Name: a, Length: 198, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
